# MPTC

./: .gitignore  CMakeLists.txt  Metrics.py  README.md  build.sh
CompIndexdata/: CMakeLists.txt  imgProcessing.cpp  main.cpp
Include/: CMakeLists.txt
Include/squish/: CMakeLists.txt  clusterfit.cpp  clusterfit.h  singlecolourfit.cpp
codec/: .codec.cpp.swo  CMakeLists.txt  codec.cpp  codec.h  decoder.cpp  decoder.h  dxt_image.cpp  dxt_image.h  encoder.cpp  entropy.cpp  entropy.h  fast_dct.h  image.cpp  image.h  image_processing.cpp  image_processing.h  image_utils.h  pipeline.h  pixel_traits.h  prob_dist.cpp  rand_test.cpp  test_decoder.cpp  utils.h  wavelet.cpp  wavelet.h
entropy/: CMakeLists.txt  arith_codec_test.cpp  arithmetic_codec.cpp  arithmetic_codec.h  bit_stream.h  bit_stream_test.cpp  fpaq1.cpp
ffmpeg/: CMakeLists.txt  mpeg_codec.c
